Lyceum/static/styles/comm.css
/* ... */
.counter-board::-webkit-scrollbar { 
    display: none;  /* Safari and Chrome */
}

.counter-ranking {
    display: flex;
    gap: 100px;
    flex-direction: column;
    width: 100vw;
}

.position {
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    gap: 10px;
    background-color: white;
}

.rank-message-line {
    width: 150px;
    margin-left: 5px;
    border: 2px solid #00baf2;
}

.position {
    font-family: 'Poppins', sans-serif;
    font-weight: 700;
    border-left: 48px solid #F28500;
}

.rank {
    width: 100%;
    box-sizing: border-box;
    font-size: 6vw;
    border-top: 10px solid #F28500;
    border-bottom: 10px solid #F28500;
    border-right: 10px solid #F28500;
    padding-left: 10px;
}

.rank-message {
    display: flex;
    flex-direction: column;
    margin: 0 10px;
    max-width: 100vw;
}

.rank-message-reply {
    margin-left: 5px;
    font-size: 18px;
}

.rank-message-reply span {
    box-shadow: inset 0 -10px 0 #30f200;
}

.rank-message-reply span:hover {
    cursor: pointer;
}

.rank-content {
    overflow: hidden;
    font-size: 6vw;
    margin-left: 5px;
}

.rank-author {
    margin-left: 5px;
    font-size: 6vw;
}

.rank-author span {
    box-shadow: inset 0 -3vw 0 #F28500;
}

.rank-score {
    width: 100%;
    box-sizing: border-box;
    font-size: 4vw;
    border-top: 10px solid #F28500;
    border-bottom: 10px solid #F28500;
    border-right: 10px solid #F28500;
}

.rank-score span {
    display: flex;
    width: fit-content;
    margin-right: 20px;
    margin-left: auto;
    color: #F28500;
}

.mastercases-page {
    height: 100%;
    width: 100%;
    position: relative;
}

.cases-scroll {
    overflow: auto;
    height: 100vh;
}

.cases {
    display: flex;
    flex-direction: row;
    flex-flow: wrap;
    width: 95%;
    margin-right: auto;
    margin-left: auto;
    height: fit-content;
    padding-bottom: 15vh;
}

.case {
    display: flex;
    flex-direction: column;
    width: 33%;
    text-align: center;
    margin: 40px 0px 50px 0px;
}

.case a span{
    font-size: 1.8vw;
    font-family: 'Poppins', sans-serif;
    font-weight: 700;
    color: black;
    text-decoration: none;
    display: inline-block;
    box-shadow: inset 0 -1vw 0 #F28500;
}

.case-name {
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    font-size: 20px;
}

.case a span:hover {
    color: #F28500;
    box-shadow: none;
}

.upload-container {
    display: flex;
    width: 100%;
    height: 125px;
    position: absolute;
    bottom: 0%;
    justify-content: center;
    align-items: center;
}

.case-upload {
    padding: 15px;
    border: 4px solid black;
    background-color: white;
    width: 60vw;
    height: fit-content;
}

.case-upload form {
    display: flex;
}

.case-upload input[type="file"]::file-selector-button {
    font-family: 'Poppins', sans-serif;
    color: #F28500;
    font-weight: 700;
    font-size: 26px;
    background-color: white;
    border: none;
}

.case-upload input[type="file"]::file-selector-button:hover {
    cursor: pointer;
}

.case-upload input {
    font-size: 26px;
}

.case-upload input[type="submit"] {
    font-family: 'Poppins', sans-serif;
    color: black;
    font-weight: 700;
    font-size: 26px;
    background-color: white;
    border: none;
    box-shadow: inset 0 -16px 0 #F28500;
    margin-left: auto;
}

.case-upload input[type="submit"]:hover {
    cursor: pointer;
}

.dog-board {
    display: flex;
}

.dogs {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.dog {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.dog-message-line {
    width: 240px;
    margin-left: 10px;
    border: 2px solid #F28500;
}

.dog {
    font-family: 'Poppins', sans-serif;
    font-weight: 700;
}

.dog {
    width: 100%;
    font-size: 52px;
    height: 50vh;
}

.dog-description {
    flex-direction: column;
    max-width: 60vw;
}

.dog-user {
    display: flex;
    flex-direction: column;
    max-width: 60vw;
}

.dog-user {
    text-align: center;
    font-size: 56px;
}

.dog-user {
    font-size: 7vw;
}

.dog-title {
    font-size: 4vw;
}

.dog-score {
    font-size: 6vw;
}

#dog-influential .dog-title {
    color: #000;
}

#dog-influential .dog-title {
    color: #00baf2;
}

#dog-influential .dog-score {
    display: flex;
    justify-content: center;
    align-items: center;
    color: #00baf2;
}

#dog-influential .dog-title {
    text-align: center;
    width: 100%;
    box-sizing: border-box;
    border-top: 12px solid #00baf2;
}

#dog-enemy {
    color: white;
    background-color: black;
}

#dog-enemy .dog-title span {
    color: #d60000;
}

#dog-enemy .dog-title {
    text-align: center;
    width: 100%;
    border-top: 12px solid #d60000;
}

#dog-enemy .dog-score h1 {
    display: flex;
    justify-content: center;
    align-items: center;
    color: #d60000;
}

@media only screen and (max-width: 1260px) {
    .option:nth-child(1) img {
        filter: invert(100%);
    }

    .option h1 {
        font-size: 2.5vw;
    }

    .option img {
        height: 50px;
    }

    
}
/* ... */

